samples/_failures_safe/1761717480_353e18_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_26a80e34.c: In function ‘main’:
./samples/SAFE/__tmp_26a80e34.c:134:54: error: expected ‘;’ at end of input
  134 |     if (len > 0 && input[len-1] == '\n') input[--len]
      |                                                      ^
      |                                                      ;
./samples/SAFE/__tmp_26a80e34.c:134:5: error: expected declaration or statement at end of input
  134 |     if (len > 0 && input[len-1] == '\n') input[--len]
      |     ^~
